--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.3",
+    "firebase": "^11.4.0",
     "motion": "^12.4.7",
     "pure-react-carousel": "^1.32.0",
     "react": "^18.3.1",
